--- a/src/sass/_var.scss
+++ b/src/sass/_var.scss
@@ -14,6 +14,11 @@ $pink300: #f06292;
 $pink400: #ec407a;
 $pink-main: #e91e63;
 
-@import url('https://fonts.googleapis.com/css?family=Neucha');
-
-$hand-writing : "Neucha",cursive;
+$bg_color: #f4f4f5;
+$btn_color-primary: #3995f4;
+$margin_mobile: 3px;
+$margin_tablet: 10px;
+$margin_desktop: 20px;
+$font_color-bold: #2b2b32;
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie&display=swap");
+$hand-writing: "Reenie Beanie", cursive;
