--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
-.App {
+.main {
+  /* margin-top: 64px; */
+  /* nav top */
+  height: 100%;
 }
 
+.App {
+  height: 100vh;
+}
 div,
 span,
 p,
 h1 {
-  box-sizing: border-box; }
-  
- 
+  box-sizing: border-box;
+}
