--- a/src/components/Inbox/Event/Event.scss
+++ b/src/components/Inbox/Event/Event.scss
@@ -1,32 +1,32 @@
 @import "../../../sass/_media.scss";
 @import "../../../sass/_var.scss";
 
-.Event_Card{
-    width: 85vw;
-    margin: 20px auto;
-    padding: 60px;
-    @include tablet{
-      width:50%;
-      margin:20px;
+.Event_Card {
+  // margin: 20px auto;
+  // @include tablet{
+  // width:50%;
+  // margin:20px;
+  // }
+  // @include desktop{
+  //  width: 50%;
+  //  margin:20px;
+  // }
+  background-color: $bg_color;
+
+  .Event_content {
+    text-align: center;
+    span {
+      position: relative;
+      left: 30%;
     }
-    @include desktop{
-     width: 50%;
-     margin:20px;
+    h1 {
+      margin-top: 0;
+      color: #3f51b5;
+      text-transform: uppercase;
+      font-family: $hand-writing;
     }
-    .Event_content{
-      text-align:center;
-      span{
-        position: relative;
-        left:30%;
-      }
-      h1{
-        margin-top:0;
-        color:#3F51B5;
-        text-transform: uppercase;
-        font-family: $hand-writing;
-      }
-      h3{
-        font-weight: lighter;
-      }
+    h3 {
+      font-weight: lighter;
     }
+  }
 }
