--- a/src/components/Inbox/Event/EventFeed/EventFeed.css
+++ b/src/components/Inbox/Event/EventFeed/EventFeed.css
@@ -1,13 +1,15 @@
-@import url("https://fonts.googleapis.com/css?family=Neucha");
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie&display=swap");
 .EventFeed {
-  margin: 100px auto 30px;
+  margin: 80px 20px;
   width: 90vw; }
   @media (min-width: 768px) and (max-width: 1023px) {
     .EventFeed {
-      width: 70vw; } }
+      width: 70vw;
+      margin: 100px auto 30px; } }
   @media (min-width: 1024px) {
     .EventFeed {
-      width: 50vw; } }
+      width: 50vw;
+      margin: 100px auto 30px; } }
   .EventFeed events-display {
     display: flex;
     flex-direction: row;
@@ -28,7 +30,11 @@
         .EventFeed events-display .EF_card {
           width: 45%; } }
       .EventFeed events-display .EF_card h1 {
-        font-family: "Neucha", cursive; }
+        font-family: "Reenie Beanie", cursive; }
       .EventFeed events-display .EF_card h3 {
         opacity: 0.6;
         font-weight: lighter; }
+  .EventFeed feed-noevent {
+    text-align: center;
+    margin: 150px auto;
+    font-size: 1em; }
