--- a/src/components/Inbox/Todo/Todo.scss
+++ b/src/components/Inbox/Todo/Todo.scss
@@ -1,28 +1,108 @@
 @import "../../../sass/_media.scss";
-
-.Todo{
-    width: 85vw;
-    margin: 20px auto;
-    padding:50px;
-    @include tablet{
-      width:80vw;
-      padding:50px 80px;
+@import "../../../sass/var";
+.Todo {
+  text-align: center;
+  min-height: 200px;
+  max-height: 450px;
+  height: auto;
+  margin: 0 auto;
+  padding-bottom: 50px;
+  width: 100%;
+  background: linear-gradient(
+    148deg,
+    rgba(35, 165, 213, 0.37) 30%,
+    rgba(252, 171, 203, 0.39) 100%
+  );
+  @include desktop {
+    width: 98%;
+  }
+  .Todo_list {
+    margin: 0 auto;
+    padding-left: 10px;
+    @include belowTablet {
+      width: 96%;
     }
-    @include desktop{
-     width: 60vw;
-     padding:50px 100px;
+    @include tablet {
+      width: 80%;
     }
-    todo-add{
-      display: flex;
-      flex-direction: row;
-      i{
-        font-size: 2em;
-        margin:15px;
-     }
-    .Todo_input{
-     width:80%;
-     margin:5px; 
-      font-size: 2em;
+    @include desktop {
+      border-left: 10px $blue200 solid;
+      width: 60%;
+    }
+    li {
+      margin-bottom: 4px;
+      background-color: white;
+      div {
+        padding: 0;
+        .item-text {
+          font-size: 1em;
+          font-weight: lighter;
+        }
+      }
+    }
+    .deleteIcon,
+    .checkbox {
+      opacity: 0.5;
+    }
+    li .deleteIcon {
+      width: 38px;
+      height: 38px;
     }
   }
+  .todo-header {
+    padding: 25px 0 10px !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    // text-align: center;
+    h1 {
+      font-size: 1.25em;
+      margin: 0;
+      @include desktop {
+        font-size: 1.5em;
+      }
+    }
+    p {
+      margin-top: 0;
+      letter-spacing: -0.5px;
+      opacity: 0.5;
+      // color: darkgray;
+    }
+    width: 100%;
+  }
+  todo-add {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    @include tablet {
+      width: 80%;
+    }
+    @include desktop {
+      width: 70% !important;
+    }
+    i {
+      font-size: 1.5em;
+      margin: 15px;
+      @include mobile {
+        margin-right: 5px;
+      }
+    }
+    .Todo_input {
+      width: 80%;
+      margin: 0 auto;
+      font-size: 1.25em;
+      margin: 5px;
+      @include largeDevices {
+        width: 100%;
+        margin-bottom: 20px;
+      }
+    }
+  }
+  -ms-overflow-style: none; // IE 10+
+  scrollbar-width: none; // Firefox
+  overflow-y: scroll;
+  overflow: scroll !important;
+}
+.Todo::-webkit-scrollbar {
+  display: none;
 }
