--- a/src/components/ilgi/Feed/Feed.css
+++ b/src/components/ilgi/Feed/Feed.css
@@ -1,15 +1,14 @@
-@import url("https://fonts.googleapis.com/css?family=Neucha");
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie&display=swap");
 .Feed {
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  margin: 64px auto 0; }
   @media (min-width: 768px) and (max-width: 1023px) {
     .Feed {
-      width: 80vw;
-      margin: 0 auto; } }
+      width: 80vw; } }
   @media (min-width: 1024px) {
     .Feed {
-      width: 60vw;
-      margin: 0 auto; } }
+      width: 60vw; } }
   .Feed .Feed_card {
     width: 90%;
     margin: 20px auto 0; }
@@ -35,16 +34,14 @@
     .Feed .Feed_card .Feed_header .Feed_action .Feed_btn_hide {
       display: none; }
     .Feed .Feed_card .Feed_content {
-      font-family: "Neucha", cursive;
+      font-family: "Reenie Beanie", cursive;
       white-space: pre-wrap;
-      margin: 0 10px; }
+      margin: 0 10px;
+      font-size: 1.6em; }
       .Feed .Feed_card .Feed_content h1 {
-        margin-top: 0;
-        font-weight: lighter;
-        font-size: 1.5em; }
-        @media (min-width: 768px) and (max-width: 1023px) {
-          .Feed .Feed_card .Feed_content h1 {
-            font-size: 2em; } }
+        font-size: 1.5em;
+        margin: 0;
+        font-weight: lighter; }
   .Feed feed-footer {
     height: 65px;
     position: relative;
@@ -52,6 +49,6 @@
     width: 100vw;
     display: block; }
   .Feed feed-nopixel {
+    text-align: center;
     margin: 150px auto;
-    font-family: "Neucha", cursive;
-    font-size: 1.4em; }
+    font-size: 1em; }
