--- a/src/components/ilgi/Feed/Feed.scss
+++ b/src/components/ilgi/Feed/Feed.scss
@@ -4,13 +4,13 @@
 .Feed {
   display: flex;
   flex-wrap: wrap;
+  margin: 64px auto 0;
+
   @include tablet {
     width: 80vw;
-    margin: 0 auto;
   }
   @include desktop {
     width: 60vw;
-    margin: 0 auto;
   }
   .Feed_card {
     width: 90%;
@@ -57,16 +57,11 @@
       font-family: $hand-writing;
       white-space: pre-wrap;
       margin: 0 10px;
+      font-size: 1.6em;
       h1 {
-        margin-top: 0;
-        font-weight: lighter;
         font-size: 1.5em;
-        @include tablet {
-          font-size: 2em;
-        }
-        @include desktop {
-          //  font-size: 2.5em;
-        }
+        margin: 0;
+        font-weight: lighter;
       }
     }
   }
@@ -78,8 +73,8 @@
     display: block;
   }
   feed-nopixel {
+    text-align: center;
     margin: 150px auto;
-    font-family: $hand-writing;
-    font-size: 1.4em;
+    font-size: 1em;
   }
 }
