--- a/src/components/ilgi/Home/Home.scss
+++ b/src/components/ilgi/Home/Home.scss
@@ -1,71 +1,91 @@
 @import "../../../sass/_media.scss";
 
-.Home{
-  .Home_containerBackground{
-    width:100vw;
-    margin:50px 15px;
+@mixin ipadpro {
+  @media (min-width: #{$desktop-width}) and (max-width: #{$desktop-width + 100px}) {
+    @content;
+  }
+}
+.Home {
+  .Home_containerBackground {
+    width: 100%;
+    margin: 75px 15px 5px;
     padding: 0;
+    @include largeDevices {
+      margin: 75px auto;
+    }
     @include tablet {
-        width: 80vw;
-        margin: 50px auto;
-     }
-     @include desktop {
-         width: 60vw;
-         margin: 50px auto;
-     }
-      .grid-container{
-        padding: 0;
-        display: grid;
-        width: 100%;
-        justify-content: center;
-        font-size: 0.6em;
-        grid-template-columns: 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw;
-        @include tablet {
-          font-size: 1em;
-          grid-template-columns: 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8%;
-       }
-       @include desktop {
+      width: 80%;
+    }
+    @include ipadpro {
+      width: 70% !important;
+    }
+    @include desktop {
+      width: 50%;
+      margin-top: 90px;
+    }
+    .grid-container {
+      padding: 0;
+      display: grid;
+      width: 100%;
+      height: 100%;
+      justify-content: center;
+      font-size: 0.6em;
+      grid-template-columns: 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8%;
+      @include tablet {
         font-size: 1em;
         grid-template-columns: 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8%;
-     }
-        .grid-item{
-          text-align: center;
-          .daysIndicator {
-            height: 8vw;
-            border-bottom: 1px solid #d7e1e5;
-            border-right: 1px solid #d7e1e5;
-            padding-top: 2vw;
-            @include tablet{
-            height: 60px;
-           }
-           @include desktop{
-            height: 57px;
-           }
-          }
-          .grid-item-custom{
-              height: 8vw;
-                cursor: pointer;
-                border-bottom: 1px solid #d7e1e5;
-                border-right: 1px solid #d7e1e5;
-                @include tablet{
-                  height: 60px;
-                 }
-                 @include desktop{
-                  height: 57px;
-                 }
-              } 
-              .grid-item-disabled{
-            background-color: #d7e1e5;
-            height: 8vw;
-            @include tablet{
-              height: 60px;
-             }
-             @include desktop{
-              height: 57px;
-             }
-          }
-          }
-         
       }
+      @include desktop {
+        font-size: 1em;
+        grid-template-columns: 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8%;
+      }
+      .grid-item {
+        text-align: center;
+        height: 100%;
+        .daysIndicator {
+          height: 8%;
+          border-bottom: 1px solid #d7e1e5;
+          border-right: 1px solid #d7e1e5;
+          display: flex;
+          flex-direction: column;
+          align-content: center;
+          justify-content: center;
+          .daysIndicator_day {
+            padding-top: 2%;
+          }
+          @include tablet {
+            height: 60px;
+          }
+          @include desktop {
+            height: 57px;
+          }
+        }
+        .grid-item-custom {
+          height: 8%;
+          cursor: pointer;
+          border-bottom: 1px solid #d7e1e5;
+          border-right: 1px solid #d7e1e5;
+          @include tablet {
+            height: 60px;
+          }
+          @include ipadpro {
+            height: 50px;
+          }
+          @include desktop {
+            height: 57px;
+          }
+        }
+        .grid-item-disabled {
+          background-color: #d7e1e5;
+          height: 8%;
+          @include tablet {
+            height: 60px;
+          }
+          @include desktop {
+            height: 57px;
+          }
+        }
+      }
+    }
   }
 }
