--- a/src/components/ilgi/Pixel/Edit/EditColor/EditColor.scss
+++ b/src/components/ilgi/Pixel/Edit/EditColor/EditColor.scss
@@ -1,23 +1,33 @@
 @import "../../../../../sass/_media.scss";
 @import "../../../../../sass/_mixin.scss";
 .EditColor {
-  margin-top:80px !important;
-  margin: 20px auto;
-  width: 80%;
+  padding-top: 80px !important;
+  margin: 0px auto;
+  width: 90%;
+  @include medium {
+    width: 80%;
+  }
   @include tablet {
     width: 60%;
   }
   @include desktop {
     width: 40%;
   }
-  h3{
-    text-align: left;
-    margin-left:10%;
-    .edit_smileicon{
-      margin: 0 10px 0 0;
-
+  h1,
+  p {
+    color: #2b2b32;
+    text-align: center;
+  }
+  h1 {
+    margin: 0;
+    @include tablet {
+      font-size: 2em;
     }
-
+  }
+  p {
+    margin-top: 0;
+    letter-spacing: -0.5px;
+    color: darkgray;
   }
   editColor-colors {
     display: block;
@@ -25,11 +35,15 @@
     div {
       opacity: 0.5;
       display: inline-block;
-      width: 20vw;
-      height: 20vw;
+      width: 25vw;
+      height: 25vw;
       margin: 1vw;
       @include boxshadow-hover-effect;
 
+      @include medium {
+        width: 20vw;
+        height: 20vw;
+      }
       @include tablet {
         width: 17vw;
         height: 17vw;
@@ -38,6 +52,29 @@
         width: 10vw;
         height: 10vw;
       }
+    }
+  }
+  section {
+    padding: 10% 0;
+    @include medium {
+      padding: 8% 0;
+    }
+    @include tablet {
+      padding: 12% 0;
+    }
+    @include desktop {
+      padding: 8% 0;
+    }
+  }
+  .EditColor_btm {
+    @include mobile {
+      padding: 18% 0 14%;
+    }
+    @include medium {
+      padding: 14% 0;
+    }
+    @include desktop {
+      padding: 12% 0;
     }
   }
 }
