--- a/src/components/ilgi/Pixel/Pixel.css
+++ b/src/components/ilgi/Pixel/Pixel.css
@@ -1,42 +1,93 @@
-@import url("https://fonts.googleapis.com/css?family=Neucha");
-.Pixel .Pixel_img {
-  margin: 80px auto 40px;
-  width: 100%; }
-  @media (min-width: 768px) and (max-width: 1023px) {
-    .Pixel .Pixel_img {
-      width: 80vw; } }
-  @media (min-width: 1024px) {
-    .Pixel .Pixel_img {
-      width: 60vw; } }
-  .Pixel .Pixel_img img {
-    width: 100%; }
-
-.Pixel .Pixel_editBtn {
-  margin: 20px auto 50px;
-  display: block; }
-
-.Pixel pixel-bottom {
-  display: flex;
-  flex-direction: column;
-  width: 85vw;
-  margin: 20px auto; }
-  @media (min-width: 768px) and (max-width: 1023px) {
-    .Pixel pixel-bottom {
-      width: 80vw;
-      flex-direction: row; } }
-  @media (min-width: 1024px) {
-    .Pixel pixel-bottom {
-      width: 60vw;
-      flex-direction: row; } }
-  .Pixel pixel-bottom .Pixel_text {
-    font-family: "Neucha", cursive;
-    padding: 40px;
-    margin: 20px auto;
-    overflow-y: scroll;
-    width: 85vw; }
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie&display=swap");
+.Pixel {
+  padding-bottom: 10%; }
+  .Pixel .Pixel_img {
+    background-color: #f4f4f5;
+    margin: 64px auto 40px;
+    width: 100%;
+    text-align: center; }
+    .Pixel .Pixel_img img {
+      width: 100%; }
+      @media (min-width: 768px) and (max-width: 1023px) {
+        .Pixel .Pixel_img img {
+          width: 80%; } }
+      @media (min-width: 1024px) {
+        .Pixel .Pixel_img img {
+          width: 60%; } }
+  .Pixel .Pixel_main {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 0 auto; }
+    @media (min-width: 601px) and (max-width: 767px) {
+      .Pixel .Pixel_main {
+        width: 60%; } }
     @media (min-width: 768px) and (max-width: 1023px) {
-      .Pixel pixel-bottom .Pixel_text {
+      .Pixel .Pixel_main {
         width: 60%; } }
     @media (min-width: 1024px) {
-      .Pixel pixel-bottom .Pixel_text {
-        width: 60%; } }
+      .Pixel .Pixel_main {
+        width: 55%; } }
+    .Pixel .Pixel_main .Pixel_main-actions {
+      display: flex;
+      margin-top: 20px;
+      justify-content: flex-end; }
+      .Pixel .Pixel_main .Pixel_main-actions button:first-child {
+        margin-right: 20px;
+        padding: 12px 35px; }
+      .Pixel .Pixel_main .Pixel_main-actions button {
+        padding: 12px 25px; }
+    .Pixel .Pixel_main .Pixel_main-content {
+      display: flex;
+      flex-direction: column; }
+      .Pixel .Pixel_main .Pixel_main-content .content-top {
+        width: 100%; }
+        .Pixel .Pixel_main .Pixel_main-content .content-top > div {
+          height: 300px;
+          margin-bottom: 15px; }
+        @media (min-width: 1024px) {
+          .Pixel .Pixel_main .Pixel_main-content .content-top {
+            display: flex;
+            margin: 0 auto;
+            justify-content: center;
+            flex-direction: row;
+            justify-content: space-around; }
+            .Pixel .Pixel_main .Pixel_main-content .content-top > div {
+              width: 48%; } }
+        .Pixel .Pixel_main .Pixel_main-content .content-top .content_journal {
+          background-color: #f4f4f5;
+          font-family: "Reenie Beanie", cursive;
+          overflow-y: scroll;
+          overflow: scroll !important;
+          padding: 20px;
+          display: flex;
+          flex-direction: column;
+          -ms-overflow-style: none;
+          scrollbar-width: none; }
+          .Pixel .Pixel_main .Pixel_main-content .content-top .content_journal h1 {
+            display: table;
+            font-size: 2em;
+            padding: 0;
+            margin: 0 auto;
+            border-bottom: 3px double crimson;
+            text-align: center;
+            letter-spacing: 4px; }
+        .Pixel .Pixel_main .Pixel_main-content .content-top .content_journal article {
+          font-size: 1.6em;
+          margin: 15px auto 0;
+          width: 90%; }
+      .Pixel .Pixel_main .Pixel_main-content .content_journal::-webkit-scrollbar {
+        display: none; }
+  .Pixel pixel-notext {
+    text-align: center;
+    margin: 0 auto;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .Pixel pixel-notext p {
+      margin: 0;
+      padding: 0;
+      font-family: "Open Sans", sans-serif; }
+    .Pixel pixel-notext button {
+      margin-top: 20px !important; }
