--- a/src/components/myaccount/Graph/Graph.scss
+++ b/src/components/myaccount/Graph/Graph.scss
@@ -1,30 +1,25 @@
 @import "../../../sass/_media.scss";
+@import "../../../sass/mixin";
+@import "../../../sass/var";
 .Graph {
+  padding: 20px 30px;
+  margin: 10px $margin_mobile $margin_mobile;
+  @include medium {
+    margin: $margin_desktop $margin_desktop 0 $margin_tablet;
+  }
+  @include tablet {
+    margin: $margin_desktop 0 0 $margin_tablet;
+  }
+  @include desktop {
+    margin: 40px 0 0 $margin_desktop;
+  }
+  @include boxshadow-lightGrey;
   graph-body {
-    width: 95vw;
     display: block;
     margin: 0 auto;
     @include tablet {
-      width: 80vw;
     }
     @include desktop {
-      width: 50vw;
-    }
-  }
-  .Graph_nav {
-    margin-top: 20px;
-    button {
-      span {
-        span {
-          font-size: 1.4em;
-          @include tablet {
-            font-size: 1.8em;
-          }
-          @include desktop {
-            font-size: 2.2em;
-          }
-        }
-      }
     }
   }
 }
