--- a/src/components/myaccount/Graph/GraphHeader/GraphHeader.scss
+++ b/src/components/myaccount/Graph/GraphHeader/GraphHeader.scss
@@ -1,57 +1,64 @@
 @import "../../../../sass/_mixin.scss";
 @import "../../../../sass/_media.scss";
 .GraphHeader {
-  width: 90vw;
-      
-  @include tablet {
-    width: 70vw;
+  text-align: left;
+  h1 {
+    font-size: 1em;
+    margin: 0;
+    margin-bottom: 2px;
   }
-  @include desktop {
-     width: 60vw;
+  hr {
+    margin: 0;
+    height: 1px;
+    border: none;
+    background-color: lightgrey;
+    width: 50%;
   }
-  margin:100px auto 5px;
   .GH_form {
+    margin: 20px;
     display: block;
-    margin: 30px 0 30px 10px;
     label {
-      font-size: 1.7em;
+      font-size: 1.2em;
+    }
+    .selection {
+      font-size: 0.75rem;
     }
   }
 
   graphHeader-month {
     display: block;
-    margin:0 auto;
+    margin: 0 auto;
     text-align: center;
     div {
       background-color: #cfd8dc;
       opacity: 0.5;
       display: inline-block;
-      width: 12vw;
-      height: 12vw;
-      margin: 1vw;
+      width: 12%;
+      height: 12%;
+      margin: 1%;
       @include boxshadow-hover-effect;
 
       @include tablet {
-        width: 6vw;
-        height: 6vw;
+        width: 6%;
+        height: 6%;
       }
       @include desktop {
-        width: 4vw;
-        height: 4vw;
-        margin:0.5vw;
+        width: 4%;
+        height: 4%;
+        margin: 0.5%;
       }
       span {
         display: block;
         font-size: 1.4em;
         position: relative;
-        top:10%;
+        top: 10%;
         @include tablet {
-          margin-top:5px;
+          margin-top: 5px;
           font-size: 1.5em;
-          top:8%;
+          top: 8%;
         }
         @include desktop {
-          margin-top:5px;
+          margin-top: 5px;
           font-size: 1.8em;
         }
       }
