--- a/src/components/myaccount/Profile/Profile.css
+++ b/src/components/myaccount/Profile/Profile.css
@@ -1,54 +1,152 @@
-@import url("https://fonts.googleapis.com/css?family=Neucha");
-.Profile div {
-  width: 85vw;
-  margin: 80px auto 20px;
-  padding: 20px; }
-  @media (min-width: 768px) and (max-width: 1023px) {
-    .Profile div {
-      width: 60vw;
-      padding: 40px; } }
-  @media (min-width: 1024px) {
-    .Profile div {
-      width: 50vw;
-      padding: 40px; } }
-  .Profile div .Profile_count {
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie&display=swap");
+.Profile-wrapper {
+  background-color: #f4f4f5;
+  height: 100%;
+  width: 100%; }
+  .Profile-wrapper .countdays {
     color: #2196f3;
-    font-size: 5em;
-    font-weight: bold;
-    margin-right: 20px;
-    display: block;
-    font-family: "Neucha", cursive;
     -webkit-animation: mymove 3s;
     animation: mymove 3s; }
 
+.Profile {
+  display: flex;
+  justify-content: center;
+  width: 65%;
+  margin: 64px auto 0; }
+  @media (max-width: 601px) {
+    .Profile {
+      flex-direction: column; } }
+  @media (max-width: 767px) {
+    .Profile {
+      width: 100%; } }
+  @media (min-width: 768px) and (max-width: 1023px) {
+    .Profile {
+      width: 90%; } }
+  @media (min-width: 600px) {
+    .Profile .Profile_left-mdlg {
+      width: 35%; } }
+  @media (min-width: 600px) {
+    .Profile .Profile_right-mdlg {
+      width: 65%; } }
+  .Profile .card_needHelp,
+  .Profile .card_profile,
+  .Profile .card_detailedPf {
+    box-shadow: 0 1px 1px rgba(128, 128, 128, 0.3) !important; }
+  .Profile .card_detailedPf,
+  .Profile .card_needHelp {
+    padding: 30px; }
+  .Profile .card_needHelp {
+    text-align: center; }
+    .Profile .card_needHelp article {
+      padding-bottom: 30px; }
+      .Profile .card_needHelp article .forumicon {
+        width: 2em;
+        height: 2em;
+        fill: lightgrey; }
+      .Profile .card_needHelp article h1 {
+        margin: 0;
+        color: #2b2b32; }
+      .Profile .card_needHelp article p {
+        font-size: 0.75rem;
+        color: grey; }
+    .Profile .card_needHelp button {
+      color: white;
+      background-color: #3995f4 !important;
+      margin: 8px;
+      border: 0;
+      cursor: pointer;
+      padding: 8px 16px;
+      font-size: 0.8rem;
+      min-width: 64px;
+      background-color: transparent;
+      min-height: 36px;
+      box-sizing: border-box;
+      border-radius: 4px;
+      text-transform: uppercase;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+      width: 80%; }
+      .Profile .card_needHelp button:hover {
+        text-decoration: none;
+        background-color: rgba(0, 0, 0, 0.08); }
+  .Profile .card_profile {
+    text-align: center;
+    height: 250px; }
+    .Profile .card_profile article,
+    .Profile .card_profile .card_bg {
+      height: 100%; }
+    .Profile .card_profile article {
+      position: relative;
+      top: -255px;
+      background-color: black;
+      /* Fallback color */
+      background-color: rgba(0, 0, 0, 0.4);
+      /* Black w/opacity/see-through */
+      color: white;
+      z-index: 2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center; }
+      .Profile .card_profile article .Profile_img {
+        margin: 0 auto;
+        width: 100px;
+        height: 100px; }
+    .Profile .card_profile .card_bg {
+      background-position: center;
+      background-repeat: no-repeat;
+      width: 100%;
+      filter: blur(8px);
+      -webkit-filter: blur(8px); }
+  .Profile .card_detailedPf {
+    font-weight: bold;
+    color: #2b2b32; }
+    .Profile .card_detailedPf p {
+      font-size: 0.75rem;
+      color: grey;
+      font-weight: normal; }
+    .Profile .card_detailedPf .userSince {
+      text-align: right;
+      font-weight: normal; }
+
+.card_detailedPf {
+  margin: 3px; }
+  @media (min-width: 601px) and (max-width: 767px) {
+    .card_detailedPf {
+      margin: 20px 20px 10px 10px; } }
+  @media (min-width: 768px) and (max-width: 1023px) {
+    .card_detailedPf {
+      margin: 20px 0 10px 10px; } }
+  @media (min-width: 1024px) {
+    .card_detailedPf {
+      margin: 40px 0 0 20px; } }
+
+.card_profile {
+  margin: 3px; }
+  @media (min-width: 601px) and (max-width: 767px) {
+    .card_profile {
+      margin: 20px 10px 0 20px; } }
+  @media (min-width: 768px) and (max-width: 1023px) {
+    .card_profile {
+      margin: 20px 10px 0 0; } }
+  @media (min-width: 1024px) {
+    .card_profile {
+      margin: 40px 20px 0 0; } }
+
+.card_needHelp {
+  margin: 3px; }
+  @media (min-width: 601px) and (max-width: 767px) {
+    .card_needHelp {
+      margin: 20px 10px 0 20px; } }
+  @media (min-width: 768px) and (max-width: 1023px) {
+    .card_needHelp {
+      margin: 20px 10px 0 0; } }
+  @media (min-width: 1024px) {
+    .card_needHelp {
+      margin: 40px 20px 0 0; } }
+
 @-webkit-keyframes mymove {
   50% {
-    font-size: 8em; } }
+    font-size: 1.5em; } }
 
 @keyframes mymove {
   50% {
-    font-size: 8em; } }
-
-.Profile .Profile_card {
-  width: 85vw;
-  margin: 20px auto;
-  padding: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly; }
-  @media (min-width: 768px) and (max-width: 1023px) {
-    .Profile .Profile_card {
-      width: 60vw;
-      padding: 40px; } }
-  @media (min-width: 1024px) {
-    .Profile .Profile_card {
-      width: 50vw;
-      padding: 40px; } }
-  .Profile .Profile_card profile-userInfo {
-    text-align: center;
-    font-family: "Neucha", cursive; }
-  .Profile .Profile_card .Profile_img {
-    margin-left: 20px;
-    width: 50%;
-    max-width: 50%;
-    height: 50%; }
+    font-size: 1.5em; } }
