--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -1,14 +1,39 @@
 $tablet-width: 768px;
 $desktop-width: 1024px;
-
+$mobile-width: 600px;
+@mixin mobile {
+  @media (max-width: #{$mobile-width + 1px}) {
+    @content;
+  }
+}
+@mixin medium {
+  @media (min-width: #{$mobile-width +1px}) and (max-width: #{$tablet-width - 1px}) {
+    @content;
+  }
+}
+@mixin afterMobile {
+  @media (min-width: #{$mobile-width}) {
+    @content;
+  }
+}
+@mixin largeDevices {
+  @media (min-width: #{$tablet-width}) {
+    @content;
+  }
+}
+@mixin belowTablet {
+  @media (max-width: #{$tablet-width - 1px}) {
+    @content;
+  }
+}
 @mixin tablet {
-    @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
-      @content;
-    }
+  @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
+    @content;
   }
-  
-  @mixin desktop {
-    @media (min-width: #{$desktop-width}) {
-      @content;
-    }
+}
+
+@mixin desktop {
+  @media (min-width: #{$desktop-width}) {
+    @content;
   }
+}
