--- a/src/sass/_mixin.scss
+++ b/src/sass/_mixin.scss
@@ -1,6 +1,9 @@
 ///box shadow
+@mixin boxshadow-lightGrey {
+  box-shadow: 0 1px 1px rgba($color: grey, $alpha: 0.3) !important;
+}
 @mixin boxshadow-hover-effect {
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11);
   border-radius: 5px;
   position: relative;
   cursor: pointer;
@@ -21,7 +24,28 @@
     opacity: 1;
   }
 }
-
+@mixin primary-button {
+  color: white;
+  background-color: $btn_color-primary !important;
+  margin: 8px;
+  border: 0;
+  cursor: pointer;
+  padding: 8px 16px;
+  font-size: 0.8rem;
+  min-width: 64px;
+  background-color: transparent;
+  min-height: 36px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  text-transform: uppercase;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  &:hover {
+    text-decoration: none;
+    background-color: rgba(0, 0, 0, 0.08);
+  }
+}
 //buttons
 
 @mixin regular-button {
